--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -58,6 +58,18 @@
         <tfoot>
         </tfoot>
     </table>
-   <script src="js/index.js"></script>  
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+        let hoje = new Date();
+        let n1 = new Negociacao(hoje, 1, 100.00);
+        console.log(n1.data);
+        hoje.setDate(hoje.getDate() + 2);
+        console.log(n1.data);
+
+        for(var i=0; i<3; i++) {
+            console.log(n1.data); // imprimindo a data 3 vezes!
+        }
+        console.log(i) // imprime 3
+    </script> 
 </body>
 </html>
