--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -60,6 +60,7 @@
   </table>
   <script src="js/apps/models/Negociacao.js"></script>
   <script src="js/apps/controllers/NegociacaoController.js"></script>
+  <script src="js/app/helpers/DateHelper.js"></script>
   <script>
   let negociacaoController = new NegociacaoController();
   </script>
