--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -59,6 +59,7 @@
     </tfoot>
   </table>
   <script src="js/apps/models/Negociacao.js"></script>
+  <script src="js/apps/models/ListaNegociacoes.js"></script>
   <script src="js/apps/controllers/NegociacaoController.js"></script>
   <script src="js/apps/helpers/DateHelper.js"></script>
   <script>
