--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -41,27 +41,13 @@
   </div>
   <br>
   <br>
-
-  <table class="table table-hover table-bordered">
-    <thead>
-      <tr>
-        <th>DATA</th>
-        <th>QUANTIDADE</th>
-        <th>VALOR</th>
-        <th>VOLUME</th>
-      </tr>
-    </thead>
-
-    <tbody>
-    </tbody>
-
-    <tfoot>
-    </tfoot>
-  </table>
+  <div id="negociacoesView"></div>
+  
   <script src="js/apps/models/Negociacao.js"></script>
   <script src="js/apps/models/ListaNegociacoes.js"></script>
   <script src="js/apps/controllers/NegociacaoController.js"></script>
   <script src="js/apps/helpers/DateHelper.js"></script>
+  <script src="js/apps/views/NegociacoesView.js"></script>
   <script>
     let negociacaoController = new NegociacaoController();
   </script>
